2005-12-12  Johannes Schmid <jhs@gnome.org>

	Patch from Johan Ersvik <jersvik@fastmail.fm>:
	* plugins/gdb/debugger.c
	
	Fix a crasher in gdb plugin
	
	* plugins/gtodo/plugin.c
	plugins/search/plugin.c
	
	Fixed bug #305301
	
	* plugins/document-manager/anjuta-docman.c:
	
	Fixed error markers 
	
	* AUTHORS: Added Rafał Bursig <bursig@poczta.fm>
	
	Patch from Rafał Bursig <bursig@poczta.fm> (#320338 and #320341):
	
	* plugins/document-manager/anjuta-docman.c:
	highlight changed files in docman popup-menu
	* plugins/gdb/debug-tree.c:
	plugins/gdb/debugger.c
	Do not corupt entire "locals" tree when variable pointer have
	additional info and arrays/strucs/unions correctly.
	

2005-12-11  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/anjuta-docman.c
	plugins/document-manager/plugin.c
	plugins/editor/text_editor.c:
	
	AUTHORS: Added Johan Ersvik

	Fixed "is-dirty" bug and tab ordering

2005-12-11  Johan Ersvik <jersvik@fastmail.fm>
	
	* plugins/editor/aneditor-autocomplete.cxx
	plugins/editor/aneditor-calltip.cxx
	plugins/editor/aneditor-priv.h
	plugins/symbol-browser/an_symbol.c
	plugins/symbol-browser/an_symbol_view.c
	tagmanager/entry.h
	tagmanager/tm_symbol.c
	tagmanager/tm_tag.c
	tagmanager/include/tm_symbol.h
	tagmanager/include/tm_tag.h
	tagmanager/c.c

	Better pointer recognition in tagmanager and symbol browser

2005-12-11  Johannes Schmid <jhs@gnome.org>

	* plugins/search/*: New search plugin derived from search code in old editor
	plugin.
	
	* plugins/document-manager/*: new document-manger which is now seperated from
	editor to allow implementation of other editor widgets. Code is mostly derived
	from old editor plugin

	* plugins/print/* new print plugin which is not fully implemented in the
	moment

	* plugins/editor/text_editor.c: Added lots of interface code
	
	* libanjuta/interfaces/libanjuta.idl: Added IAnjutaEditorEdit, IAnjutaEditorView,
	IAnjutaEditorFactory and extended IAnjutaEditor
	